[package]
name = "yoga-sdl2"
version = "0.0.1"
authors = ["David Obrite <davidobrite@gmail.com>"]

[dependencies]
rand = "0.3.15"
yoga = { git = "https://github.com/dobrite/yoga-rs.git" }
yoga-wrapper = { git = "https://github.com/dobrite/yoga-wrapper-rs.git" }

[dependencies.sdl2]
version = "0.27"
default-features = false
features = ["ttf"]
